feat: add extract data from receipt feature
